--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://bobjohnd69.github.io/WS1-Access-RDS-Through-Lambda/"
+BaseURL = "https://bobjohnd69.github.io/WS1-Access-RDS-Through-Lambda/"
 # Change the default theme to be use when building the site with Hugo
 theme = "hugo-theme-learn"
 
@@ -10,7 +10,7 @@ home = [ "HTML", "RSS", "JSON"]
   # Change default color scheme with a variant one. Can be "red", "blue", "green".
   themeVariant = "workshop"
   # Git hub repo link
-  editURL = ""
+  editURL = "https://bobjohnd69.github.io/WS1-Access-RDS-Through-Lambda/"
   description = ""
   author = "journeyoftheaverageguy@gmail.com"
   showVisitedLinks = true
