--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseURL = "https://bobjohnd69.github.io/WS1-Access-RDS-Through-Lambda/"
+canonifyURLs = true
 # Change the default theme to be use when building the site with Hugo
 theme = "hugo-theme-learn"
 
